# kmercpp

./: CMakeLists.txt  README.md  main.cpp
include/kmercpp/: kmer.hpp  kmer_hash.hpp  loop_executor.hpp
kmercpp/: kmer.hpp  kmer_hash.hpp  loop_executor.hpp
tests/: CMakeLists.txt  test_kmer32.cpp  test_kmer64.cpp  test_kmer96.cpp  test_utils.hpp
